--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@ hello,world
 hello ,coding families.
 hello, coding brothers.
 hello, family,
-wow it was amazing git hub training i am impresed by ths work by the way.
+wow it was amazing git hub training i am impresed by this work by the way.
